--- a/DetailsPage.xaml
+++ b/DetailsPage.xaml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:micro="clr-namespace:Microcharts.Maui;assembly=Microcharts.Maui"
              xmlns:local="clr-namespace:MauiApp1;assembly=MauiApp1"
              x:Class="MauiApp1.DetailsPage"
              Title="{Binding Workout.Name}">
-    <local:CustomChartView Chart="{Binding LineChart}" />
+    <VerticalStackLayout>
+        <micro:ChartView Chart="{Binding LineChart}" HeightRequest="300" />
+    </VerticalStackLayout>
 </ContentPage>
